[gd_scene load_steps=24 format=3]

[ext_resource type="PackedScene" uid="uid://cgaeu2ag4857g" path="res://Scene/Base/BaseMonster.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Monster/Monster_8.gd" id="2"]
[ext_resource type="Shader" path="res://Shader/BaseMonster.gdshader" id="3"]
[ext_resource type="Texture2D" uid="uid://5eeblvkyh2ru" path="res://Art/Monster/Monster_8/wait/1230.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b6nfjrcmbkky7" path="res://Art/Monster/Monster4/Boss_Death.png" id="5"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource( "3" )
shader_parameter/SAMPLES = 50
shader_parameter/WIDTH = 1.3
shader_parameter/OUTLINE_COLOR = Color(0, 0, 0, 1)
shader_parameter/TEXTURE_SCALE = Vector2(1, 1)
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "4" )
region = Rect2(0, 0, 266, 222)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "5" )
region = Rect2(768, 0, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "5" )
region = Rect2(0, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "5" )
region = Rect2(192, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "5" )
region = Rect2(384, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "5" )
region = Rect2(576, 192, 192, 192)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "5" )
region = Rect2(768, 192, 192, 192)
script = null

[sub_resource type="SpriteFrames" id="9"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}],
"loop": false,
"name": &"bfzh",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}],
"loop": false,
"name": &"can_hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}],
"loop": false,
"name": &"death",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}],
"loop": false,
"name": &"wait",
"speed": 5.0
}]
script = null

[sub_resource type="Animation" id="10"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["bfzh"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"call_monster"
}]
}
script = null

[sub_resource type="Animation" id="11"]
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["can_hurt"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="Animation" id="12"]
length = 0.88
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76, 0.8, 0.84),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.7, 0.7001, 0.7002, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"fall_items"
}, {
"args": [],
"method": &"fall_medicine"
}, {
"args": [],
"method": &"fall_stone_"
}, {
"args": [],
"method": &"free"
}]
}
script = null

[sub_resource type="Animation" id="13"]
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hurt"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="Animation" id="14"]
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["wait"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
script = null

[sub_resource type="AnimationLibrary" id="15"]
_data = {
"bfzh": SubResource( "10" ),
"can_hurt": SubResource( "11" ),
"death": SubResource( "12" ),
"hurt": SubResource( "13" ),
"wait": SubResource( "14" )
}
script = null

[sub_resource type="RectangleShape2D" id="16"]
size = Vector2(268.5, 222)
script = null

[sub_resource type="RectangleShape2D" id="17"]
size = Vector2(245, 95)
script = null

[sub_resource type="CircleShape2D" id="18"]
radius = 49.0102
script = null

[node name="Monster_8" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="mr_ani" parent="MonsterDir" index="0"]
material = SubResource( "1" )
sprite_frames = SubResource( "9" )
animation = &"bfzh"

[node name="mr_player" parent="." index="2"]
libraries = {
"": SubResource( "15" )
}

[node name="BaseDamageBox" parent="." index="3"]
visible = false

[node name="HitBox" parent="BaseDamageBox/HitBox" index="0"]
disabled = true
metadata/_edit_lock_ = true

[node name="HurtBox" parent="BaseDamageBox" index="1"]
collision_layer = 3072

[node name="HurtBox" parent="BaseDamageBox/HurtBox" index="0"]
position = Vector2(2.75, -2)
shape = SubResource( "16" )
metadata/_edit_lock_ = true

[node name="pz" parent="." index="4"]
position = Vector2(-0.5, 44.5)
shape = SubResource( "17" )

[node name="Rd" type="Area2D" parent="." index="10"]
position = Vector2(93, -49)
collision_layer = 0
collision_mask = 4096

[node name="rrd" type="CollisionShape2D" parent="Rd" index="0"]
shape = SubResource( "18" )
disabled = true
metadata/_edit_lock_ = true

[node name="create_rd" type="Timer" parent="." index="11"]
wait_time = 4.0
autostart = true

[node name="reset_hd" type="Timer" parent="." index="12"]

[connection signal="area_entered" from="Rd" to="." method="_on_rd_area_entered" flags=18]
[connection signal="timeout" from="create_rd" to="." method="_on_create_rd_timeout" flags=18]
[connection signal="timeout" from="reset_hd" to="." method="_on_reset_hd_timeout" flags=18]
